Snackbar action label word-wrap problem repair

--- a/bit-snackbar/src/bit-snackbar.css
+++ b/bit-snackbar/src/bit-snackbar.css
@@ -84,6 +84,7 @@
   margin: 0;
   margin-left: auto;
   padding: 0 15px 0 0;
+  white-space: nowrap;
 }
 
 .bit-snackbar-container .snack-action .action {
